--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="infos">
                 <h6 class="subtitle">hello,I'm</h6>
                 <h6 class="title">Adithya S</h6>
-                <p>UI/UX Designer</p>
+                <p>Web Developer</p>
 
                 <div class="buttons pt-3">
                     <button class="btn btn-primary rounded">HIRE ME</button>
