--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 </div>
             </div>              
             <div class="img-holder">
-                <img src="assets/imgs/adi.png" alt="">
+                <img src="assets/imgs/adi11.png" alt="">
             </div>      
         </div>  
 
@@ -86,8 +86,8 @@
                 <div class="pl-md-4 col-md-9">
                     <h6 class="title">Adithya S</S></h6>
                     <p class="subtitle">Web Developer</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident, pariatur, aperiam aut autem voluptas odit. Odio ducimus delectus totam sed aliquam sequi praesentium mollitia, illum repudiandae quidem quod, magni magnam.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim, eius, nam. Quo praesentium qui temporibus voluptatum, facilis aliquid eligendi fugiat beatae neque inventore non. Laborum repellendus consequatur ullam voluptatum asperiores.</p>
+                    <p> I am a passionate third-year BTech student with a strong interest in web development. I thrive on creating interactive and user-friendly websites that provide engaging experiences for users. With a solid foundation in HTML, CSS, and JavaScript, I continuously expand my knowledge to incorporate the latest web technologies and frameworks. Through various projects and coursework, I have gained hands-on experience in developing responsive and visually appealing websites. I am enthusiastic about exploring new front-end technologies and staying up-to-date with industry trends. My goal is to leverage my skills and knowledge to contribute to the dynamic field of web development and make a positive impact on the digital world.</p>
+                    <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim, eius, nam. Quo praesentium qui temporibus voluptatum, facilis aliquid eligendi fugiat beatae neque inventore non. Laborum repellendus consequatur ullam voluptatum asperiores.</p> -->
                     <button class="btn btn-primary rounded mt-3">DOWNLOAD CV</button>                   
                 </div>
             </div>
@@ -305,7 +305,8 @@
             </div>
         </div>  
         <div id="map">
-            <iframe src="https://snazzymaps.com/embed/61257"></iframe>
+            <!-- <iframe src="https://snazzymaps.com/embed/61257"></iframe> -->
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3946.0865168960026!2d76.97028455026164!3d8.49096889386525!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b05ba511ecc0667%3A0xd23b5ccfdf2aab2b!2sLBS%20Institute%20Of%20Technology%20for%20Women%20Poojappura%20Thiruvananthapuram!5e0!3m2!1sen!2sin!4v1681140414744!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>      
     </section>
     <!-- End of Contact Section -->
